{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 1542,
  "lineage": "33f1e25c-0a93-21c5-bcff-114f3e3a37e6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "data_outbound_asg_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-01655e76622e5b3ca",
                "route_table_id": "rtb-0546536e16bd3ea4a",
                "subnet_id": "subnet-05a5f23a5d7850420"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0ffdee1b659a0a43d",
                "route_table_id": "rtb-0546536e16bd3ea4a",
                "subnet_id": "subnet-0a7cd1cb23b694b8d"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0e28ed411ce853d57",
                "route_table_id": "rtb-0546536e16bd3ea4a",
                "subnet_id": "subnet-098152c385dd1b0fc"
              }
            ],
            "filter": [
              {
                "name": "tag:aws:cloudformation:stack-name",
                "values": [
                  "CP-TGW-Outbound-ASG-VPCStack-*"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-0546536e16bd3ea4a",
            "owner_id": "157151771343",
            "route_table_id": "rtb-0546536e16bd3ea4a",
            "routes": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0594e3c49c93b1558",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "Public Subnets",
              "Network": "Public"
            },
            "vpc_id": "vpc-0b04ed93c7c0b4186"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "outbound_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-05a5f23a5d7850420",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.30.64.0/24",
            "default_for_az": false,
            "id": "subnet-05a5f23a5d7850420",
            "map_public_ip_on_launch": true,
            "owner_id": "157151771343",
            "state": "available",
            "tags": {
              "Name": "Public subnet 2",
              "Network": "Public"
            },
            "vpc_id": "vpc-0b04ed93c7c0b4186"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-098152c385dd1b0fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.30.128.0/24",
            "default_for_az": false,
            "id": "subnet-098152c385dd1b0fc",
            "map_public_ip_on_launch": true,
            "owner_id": "157151771343",
            "state": "available",
            "tags": {
              "Name": "Public subnet 3",
              "Network": "Public"
            },
            "vpc_id": "vpc-0b04ed93c7c0b4186"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-0a7cd1cb23b694b8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.30.0.0/24",
            "default_for_az": false,
            "id": "subnet-0a7cd1cb23b694b8d",
            "map_public_ip_on_launch": true,
            "owner_id": "157151771343",
            "state": "available",
            "tags": {
              "Name": "Public subnet 1",
              "Network": "Public"
            },
            "vpc_id": "vpc-0b04ed93c7c0b4186"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "data_outbound_asg_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:vpc/vpc-0b04ed93c7c0b4186",
            "cidr_block": "10.30.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05112aed176d605f3",
                "cidr_block": "10.30.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0260dc65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "CP-TGW-Outbound-ASG-VPCStack-*"
                ]
              }
            ],
            "id": "vpc-0b04ed93c7c0b4186",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05d7bc3b838eec751",
            "owner_id": "157151771343",
            "state": "available",
            "tags": {
              "Name": "CP-TGW-Outbound-ASG-VPCStack-PKEJ9G6D7IAJ"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "transit_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:transit-gateway/tgw-011d7cb94a1aa50b8",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "CP-TGW",
            "dns_support": "enable",
            "id": "tgw-011d7cb94a1aa50b8",
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW",
              "x-chkp-vpn": "mgmt-aws/tgw-community"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "checkpoint_inbound_transit_gateway_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-02e908184973aff46",
            "tags": {
              "Name": "CP-TGW-TransitGW-Inbound-CheckPoint-Route-Table"
            },
            "transit_gateway_id": "tgw-011d7cb94a1aa50b8"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "checkpoint_management_transit_gateway_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0e88de1458d91716e",
            "tags": {
              "Name": "CP-TGW-TransitGW-Management-CheckPoint-Route-Table"
            },
            "transit_gateway_id": "tgw-011d7cb94a1aa50b8"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "checkpoint_outbound_transit_gateway_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-08dff449110452c44",
            "tags": {
              "Name": "CP-TGW-TransitGW-Outbound-CheckPoint-Route-Table",
              "x-chkp-vpn": "mgmt-aws/tgw-community/associate"
            },
            "transit_gateway_id": "tgw-011d7cb94a1aa50b8"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "spoke_inbound_transit_gateway_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-005764c691c1cb755",
            "tags": {
              "Name": "CP-TGW-TransitGW-Inbound-Spoke-Route-Table",
              "x-chkp-vpn": "mgmt-aws/tgw-community/propagate"
            },
            "transit_gateway_id": "tgw-011d7cb94a1aa50b8"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "spoke_to_internet_transit_gateway_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0d7620fed804c46d0",
            "tags": {
              "Name": "CP-TGW-TransitGW-Outbound-Spoke-Route-Table",
              "x-chkp-vpn": "mgmt-aws/tgw-community/propagate"
            },
            "transit_gateway_id": "tgw-011d7cb94a1aa50b8"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "checkpoint_inbound_transit_gateway_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-02e908184973aff46_tgw-attach-01815ff000f6a52cf",
            "resource_id": "vpc-0ee123db291670666",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-01815ff000f6a52cf",
            "transit_gateway_route_table_id": "tgw-rtb-02e908184973aff46"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.checkpoint_inbound_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.inbound_transit_gateway_vpc_attachment",
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "checkpoint_management_transit_gateway_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0e88de1458d91716e_tgw-attach-0389649cff8af103c",
            "resource_id": "vpc-02affff7ae45ed230",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0389649cff8af103c",
            "transit_gateway_route_table_id": "tgw-rtb-0e88de1458d91716e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.checkpoint_management_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.management_transit_gateway_vpc_attachment",
            "aws_subnet.management_subnet",
            "aws_vpc.management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "checkpoint_outbound_transit_gateway_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0e88de1458d91716e_tgw-attach-09881c10334f3ac1f",
            "resource_id": "vpc-0b04ed93c7c0b4186",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-09881c10334f3ac1f",
            "transit_gateway_route_table_id": "tgw-rtb-0e88de1458d91716e"
          },
          "dependencies": [
            "aws_cloudformation_stack.checkpoint_tgw_cloudformation_stack",
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.checkpoint_management_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.outbound_transit_gateway_vpc_attachment",
            "data.aws_availability_zones.azs",
            "data.aws_subnet.outbound_subnet",
            "data.aws_subnet_ids.outbound_subnet_ids",
            "data.aws_vpc.data_outbound_asg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "spoke_1_transit_gateway_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-005764c691c1cb755_tgw-attach-0971f85a2cfd74558",
            "resource_id": "vpc-02708a3331b9aaf1e",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0971f85a2cfd74558",
            "transit_gateway_route_table_id": "tgw-rtb-005764c691c1cb755"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.spoke_inbound_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.spoke_1_transit_gateway_vpc_attachment",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "spoke_1a_transit_gateway_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-005764c691c1cb755_tgw-attach-027b4cac07382c18e",
            "resource_id": "vpc-0ef232ef82709baf0",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-027b4cac07382c18e",
            "transit_gateway_route_table_id": "tgw-rtb-005764c691c1cb755"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.spoke_inbound_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.spoke_1a_transit_gateway_vpc_attachment",
            "aws_subnet.spoke_1a_external_subnet",
            "aws_vpc.spoke_1a_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "spoke_2_transit_gateway_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0d7620fed804c46d0_tgw-attach-091d61a646ffe1369",
            "resource_id": "vpc-016cb676105a6b3e0",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-091d61a646ffe1369",
            "transit_gateway_route_table_id": "tgw-rtb-0d7620fed804c46d0"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.spoke_to_internet_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.spoke_2_transit_gateway_vpc_attachment",
            "aws_subnet.spoke_2_external_subnet",
            "aws_vpc.spoke_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "checkpoint_inbound_transit_gateway_route_table_propagation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-005764c691c1cb755_tgw-attach-01815ff000f6a52cf",
            "resource_id": "vpc-0ee123db291670666",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-01815ff000f6a52cf",
            "transit_gateway_route_table_id": "tgw-rtb-005764c691c1cb755"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.spoke_inbound_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.inbound_transit_gateway_vpc_attachment",
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "inbound_management_transit_gateway_route_table_propagation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-02e908184973aff46_tgw-attach-0389649cff8af103c",
            "resource_id": "vpc-02affff7ae45ed230",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0389649cff8af103c",
            "transit_gateway_route_table_id": "tgw-rtb-02e908184973aff46"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.checkpoint_inbound_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.management_transit_gateway_vpc_attachment",
            "aws_subnet.management_subnet",
            "aws_vpc.management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "management_inbound_transit_gateway_route_table_propagation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0e88de1458d91716e_tgw-attach-01815ff000f6a52cf",
            "resource_id": "vpc-0ee123db291670666",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-01815ff000f6a52cf",
            "transit_gateway_route_table_id": "tgw-rtb-0e88de1458d91716e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.checkpoint_management_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.inbound_transit_gateway_vpc_attachment",
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "management_outbound_transit_gateway_route_table_propagation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0e88de1458d91716e_tgw-attach-09881c10334f3ac1f",
            "resource_id": "vpc-0b04ed93c7c0b4186",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-09881c10334f3ac1f",
            "transit_gateway_route_table_id": "tgw-rtb-0e88de1458d91716e"
          },
          "dependencies": [
            "aws_cloudformation_stack.checkpoint_tgw_cloudformation_stack",
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.checkpoint_management_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.outbound_transit_gateway_vpc_attachment",
            "data.aws_availability_zones.azs",
            "data.aws_subnet.outbound_subnet",
            "data.aws_subnet_ids.outbound_subnet_ids",
            "data.aws_vpc.data_outbound_asg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "outbound_management_transit_gateway_route_table_propagation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0e88de1458d91716e_tgw-attach-0389649cff8af103c",
            "resource_id": "vpc-02affff7ae45ed230",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0389649cff8af103c",
            "transit_gateway_route_table_id": "tgw-rtb-0e88de1458d91716e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.checkpoint_management_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.management_transit_gateway_vpc_attachment",
            "aws_subnet.management_subnet",
            "aws_vpc.management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "spoke_1_inbound_transit_gateway_route_table_propagation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-02e908184973aff46_tgw-attach-0971f85a2cfd74558",
            "resource_id": "vpc-02708a3331b9aaf1e",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0971f85a2cfd74558",
            "transit_gateway_route_table_id": "tgw-rtb-02e908184973aff46"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.checkpoint_inbound_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.spoke_1_transit_gateway_vpc_attachment",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "spoke_1_outbound_transit_gateway_route_table_propagation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-08dff449110452c44_tgw-attach-0971f85a2cfd74558",
            "resource_id": "vpc-02708a3331b9aaf1e",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0971f85a2cfd74558",
            "transit_gateway_route_table_id": "tgw-rtb-08dff449110452c44"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.checkpoint_outbound_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.spoke_1_transit_gateway_vpc_attachment",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "spoke_1a_inbound_transit_gateway_route_table_propagation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-02e908184973aff46_tgw-attach-027b4cac07382c18e",
            "resource_id": "vpc-0ef232ef82709baf0",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-027b4cac07382c18e",
            "transit_gateway_route_table_id": "tgw-rtb-02e908184973aff46"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.checkpoint_inbound_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.spoke_1a_transit_gateway_vpc_attachment",
            "aws_subnet.spoke_1a_external_subnet",
            "aws_vpc.spoke_1a_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "spoke_1a_outbound_transit_gateway_route_table_propagation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-08dff449110452c44_tgw-attach-027b4cac07382c18e",
            "resource_id": "vpc-0ef232ef82709baf0",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-027b4cac07382c18e",
            "transit_gateway_route_table_id": "tgw-rtb-08dff449110452c44"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.checkpoint_outbound_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.spoke_1a_transit_gateway_vpc_attachment",
            "aws_subnet.spoke_1a_external_subnet",
            "aws_vpc.spoke_1a_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "spoke_2_outbound_transit_gateway_route_table_propagation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-08dff449110452c44_tgw-attach-091d61a646ffe1369",
            "resource_id": "vpc-016cb676105a6b3e0",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-091d61a646ffe1369",
            "transit_gateway_route_table_id": "tgw-rtb-08dff449110452c44"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_ec2_transit_gateway_route_table.checkpoint_outbound_transit_gateway_route_table",
            "aws_ec2_transit_gateway_vpc_attachment.spoke_2_transit_gateway_vpc_attachment",
            "aws_subnet.spoke_2_external_subnet",
            "aws_vpc.spoke_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "inbound_transit_gateway_vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-01815ff000f6a52cf",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-007bac7b01e36ca34",
              "subnet-03818eb6071b274d6",
              "subnet-0fc164747852b3b71"
            ],
            "tags": {
              "Name": "CP-TGW-Inbound-TGW-Attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
            "vpc_id": "vpc-0ee123db291670666",
            "vpc_owner_id": "157151771343"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "management_transit_gateway_vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-0389649cff8af103c",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-09c46ae09bb6f084c"
            ],
            "tags": {
              "Name": "CP-TGW-Management-TGW-Attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
            "vpc_id": "vpc-02affff7ae45ed230",
            "vpc_owner_id": "157151771343"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_subnet.management_subnet",
            "aws_vpc.management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "outbound_transit_gateway_vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-09881c10334f3ac1f",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-05a5f23a5d7850420",
              "subnet-098152c385dd1b0fc",
              "subnet-0a7cd1cb23b694b8d"
            ],
            "tags": {
              "Name": "CP-TGW-Outbound-TGW-Attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
            "vpc_id": "vpc-0b04ed93c7c0b4186",
            "vpc_owner_id": "157151771343"
          },
          "dependencies": [
            "aws_cloudformation_stack.checkpoint_tgw_cloudformation_stack",
            "aws_ec2_transit_gateway.transit_gateway",
            "data.aws_availability_zones.azs",
            "data.aws_subnet.outbound_subnet",
            "data.aws_subnet_ids.outbound_subnet_ids",
            "data.aws_vpc.data_outbound_asg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "spoke_1_transit_gateway_vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-0971f85a2cfd74558",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0009323285a0bcf2c",
              "subnet-0456b45ed9ef12985",
              "subnet-0f8f43e1235a70c53"
            ],
            "tags": {
              "Name": "CP-TGW-Spoke-1-TGW-Attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
            "vpc_id": "vpc-02708a3331b9aaf1e",
            "vpc_owner_id": "157151771343"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "spoke_1a_transit_gateway_vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-027b4cac07382c18e",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-01ea68e1d13ae90ac",
              "subnet-0914677997ab580fd",
              "subnet-0f1bb02c297e12047"
            ],
            "tags": {
              "Name": "CP-TGW-Spoke-1a-TGW-Attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
            "vpc_id": "vpc-0ef232ef82709baf0",
            "vpc_owner_id": "157151771343"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_subnet.spoke_1a_external_subnet",
            "aws_vpc.spoke_1a_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "spoke_2_transit_gateway_vpc_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-091d61a646ffe1369",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0688dbc659250c49c"
            ],
            "tags": {
              "Name": "CP-TGW-Spoke-2-TGW-Attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
            "vpc_id": "vpc-016cb676105a6b3e0",
            "vpc_owner_id": "157151771343"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_subnet.spoke_2_external_subnet",
            "aws_vpc.spoke_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "spoke_1_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caee806a0c3782c4",
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:instance/i-042fd6f36ab6e910a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042fd6f36ab6e910a",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "key_name": "AWS R8010 Management",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09ac1caadbada7b74",
            "private_dns": "ip-10-110-100-70.ap-southeast-2.compute.internal",
            "private_ip": "10.110.100.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-029d1d76b5a0354d7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8f43e1235a70c53",
            "tags": {
              "Name": "CP-TGW-Spoke-1 Web Server 1",
              "Server": "CP-TGW-Website"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cf52fbc12bb91e14"
            ]
          },
          "dependencies": [
            "aws_security_group.spoke_1_security_group",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_ami.ubuntu_ami",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caee806a0c3782c4",
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:instance/i-0f40eb368720a5040",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f40eb368720a5040",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "key_name": "AWS R8010 Management",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0503b08fd4d0c434b",
            "private_dns": "ip-10-110-101-236.ap-southeast-2.compute.internal",
            "private_ip": "10.110.101.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0085b1306c2819e25",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0456b45ed9ef12985",
            "tags": {
              "Name": "CP-TGW-Spoke-1 Web Server 2",
              "Server": "CP-TGW-Website"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cf52fbc12bb91e14"
            ]
          },
          "dependencies": [
            "aws_security_group.spoke_1_security_group",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_ami.ubuntu_ami",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caee806a0c3782c4",
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:instance/i-0b90f18b1c2157015",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b90f18b1c2157015",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "key_name": "AWS R8010 Management",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0523750736eb14e5d",
            "private_dns": "ip-10-110-102-138.ap-southeast-2.compute.internal",
            "private_ip": "10.110.102.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07102546e1498c544",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0009323285a0bcf2c",
            "tags": {
              "Name": "CP-TGW-Spoke-1 Web Server 3",
              "Server": "CP-TGW-Website"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cf52fbc12bb91e14"
            ]
          },
          "dependencies": [
            "aws_security_group.spoke_1_security_group",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_ami.ubuntu_ami",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "spoke_2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caee806a0c3782c4",
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:instance/i-08a38e16ebde6f8f6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a38e16ebde6f8f6",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "key_name": "AWS R8010 Management",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06c92079e6160bd72",
            "private_dns": "ip-10-120-116-230.ap-southeast-2.compute.internal",
            "private_ip": "10.120.116.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0681e33ddd2015962",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0688dbc659250c49c",
            "tags": {
              "Dev-Test": "false",
              "Name": "CP-TGW-Spoke-2 Linux",
              "Prod-Test": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02721d54c3b997df0"
            ]
          },
          "dependencies": [
            "aws_security_group.spoke_2_security_group",
            "aws_subnet.spoke_2_external_subnet",
            "aws_vpc.spoke_2_vpc",
            "data.aws_ami.ubuntu_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "inbound_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07acf4959bff31f2d",
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Inbound-IGW"
            },
            "vpc_id": "vpc-0ee123db291670666"
          },
          "dependencies": [
            "aws_vpc.inbound_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "management_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ea3ca33594f20f2b",
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Management-IGW"
            },
            "vpc_id": "vpc-02affff7ae45ed230"
          },
          "dependencies": [
            "aws_vpc.management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:loadbalancer/app/CP-TGW-External-ALB/ec6d5e10ec7cd8b0",
            "arn_suffix": "app/CP-TGW-External-ALB/ec6d5e10ec7cd8b0",
            "dns_name": "CP-TGW-External-ALB-731966684.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:loadbalancer/app/CP-TGW-External-ALB/ec6d5e10ec7cd8b0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "CP-TGW-External-ALB",
            "security_groups": [
              "sg-08230596c20e73130"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007bac7b01e36ca34"
              },
              {
                "subnet_id": "subnet-03818eb6071b274d6"
              },
              {
                "subnet_id": "subnet-0fc164747852b3b71"
              }
            ],
            "subnets": [
              "subnet-007bac7b01e36ca34",
              "subnet-03818eb6071b274d6",
              "subnet-0fc164747852b3b71"
            ],
            "tags": {
              "name": "CP-TGW-External-ALB"
            },
            "vpc_id": "vpc-0ee123db291670666",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.ealb",
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:loadbalancer/net/CP-TGW-External-NLB/bd95278c6bd09fa4",
            "arn_suffix": "net/CP-TGW-External-NLB/bd95278c6bd09fa4",
            "dns_name": "CP-TGW-External-NLB-bd95278c6bd09fa4.elb.ap-southeast-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:loadbalancer/net/CP-TGW-External-NLB/bd95278c6bd09fa4",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "CP-TGW-External-NLB",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007bac7b01e36ca34"
              },
              {
                "subnet_id": "subnet-03818eb6071b274d6"
              },
              {
                "subnet_id": "subnet-0fc164747852b3b71"
              }
            ],
            "subnets": [
              "subnet-007bac7b01e36ca34",
              "subnet-03818eb6071b274d6",
              "subnet-0fc164747852b3b71"
            ],
            "tags": {
              "name": "CP-TGW-External-NLB"
            },
            "vpc_id": "vpc-0ee123db291670666",
            "zone_id": "ZCT6FZBF4DROD"
          },
          "dependencies": [
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external_nlb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:loadbalancer/net/CP-TGW-External-NLB2/3f5d7dab61f42d2f",
            "arn_suffix": "net/CP-TGW-External-NLB2/3f5d7dab61f42d2f",
            "dns_name": "CP-TGW-External-NLB2-3f5d7dab61f42d2f.elb.ap-southeast-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:loadbalancer/net/CP-TGW-External-NLB2/3f5d7dab61f42d2f",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "CP-TGW-External-NLB2",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007bac7b01e36ca34"
              },
              {
                "subnet_id": "subnet-03818eb6071b274d6"
              },
              {
                "subnet_id": "subnet-0fc164747852b3b71"
              }
            ],
            "subnets": [
              "subnet-007bac7b01e36ca34",
              "subnet-03818eb6071b274d6",
              "subnet-0fc164747852b3b71"
            ],
            "tags": {
              "name": "CP-TGW-External-NLB2"
            },
            "vpc_id": "vpc-0ee123db291670666",
            "zone_id": "ZCT6FZBF4DROD"
          },
          "dependencies": [
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_aws_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:loadbalancer/net/CP-TGW-Internal-NLB/366132f5c7a22dcc",
            "arn_suffix": "net/CP-TGW-Internal-NLB/366132f5c7a22dcc",
            "dns_name": "CP-TGW-Internal-NLB-366132f5c7a22dcc.elb.ap-southeast-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:loadbalancer/net/CP-TGW-Internal-NLB/366132f5c7a22dcc",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "CP-TGW-Internal-NLB",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0009323285a0bcf2c"
              },
              {
                "subnet_id": "subnet-0456b45ed9ef12985"
              },
              {
                "subnet_id": "subnet-0f8f43e1235a70c53"
              }
            ],
            "subnets": [
              "subnet-0009323285a0bcf2c",
              "subnet-0456b45ed9ef12985",
              "subnet-0f8f43e1235a70c53"
            ],
            "tags": {
              "Environment": "CP-TGW-Internal_NLB",
              "x-chkp-forwarding": "TCP-9081-80",
              "x-chkp-management": "mgmt-aws",
              "x-chkp-template": "tgw-inbound-template"
            },
            "vpc_id": "vpc-02708a3331b9aaf1e",
            "zone_id": "ZCT6FZBF4DROD"
          },
          "dependencies": [
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:listener/app/CP-TGW-External-ALB/ec6d5e10ec7cd8b0/4efd5bf718a76a2c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Ext-ALB-TG-app1/59b6f4a264ade1d1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:listener/app/CP-TGW-External-ALB/ec6d5e10ec7cd8b0/4efd5bf718a76a2c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:loadbalancer/app/CP-TGW-External-ALB/ec6d5e10ec7cd8b0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.external_alb",
            "aws_lb_target_group.external_lb_tg_app1",
            "aws_security_group.ealb",
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:listener/net/CP-TGW-External-NLB/bd95278c6bd09fa4/9bba523ef2417cd7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Ext-NLB-TG/1026e1837cae2237",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:listener/net/CP-TGW-External-NLB/bd95278c6bd09fa4/9bba523ef2417cd7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:loadbalancer/net/CP-TGW-External-NLB/bd95278c6bd09fa4",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.external_nlb",
            "aws_lb_target_group.external_lb_target_group",
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external_lb_listener2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:listener/net/CP-TGW-External-NLB2/3f5d7dab61f42d2f/5cf8aaba1c831216",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Ext-NLB2-TG/e79459fca06243c6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:listener/net/CP-TGW-External-NLB2/3f5d7dab61f42d2f/5cf8aaba1c831216",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:loadbalancer/net/CP-TGW-External-NLB2/3f5d7dab61f42d2f",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.external_nlb2",
            "aws_lb_target_group.external_lb2_target_group",
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:listener/net/CP-TGW-Internal-NLB/366132f5c7a22dcc/ccd5ba9b0823b5f7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Int-NLB-TG/1fb2dbc4b462b282",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:listener/net/CP-TGW-Internal-NLB/366132f5c7a22dcc/ccd5ba9b0823b5f7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:loadbalancer/net/CP-TGW-Internal-NLB/366132f5c7a22dcc",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.internal_aws_lb",
            "aws_lb_target_group.internal_lb_target_group",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "external_alb_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Ext-ALB-TG-app2/7ea8689d29e4a208",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:listener-rule/app/CP-TGW-External-ALB/ec6d5e10ec7cd8b0/4efd5bf718a76a2c/763d1afcbfd8b9d8",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app2/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "/app2/*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:listener-rule/app/CP-TGW-External-ALB/ec6d5e10ec7cd8b0/4efd5bf718a76a2c/763d1afcbfd8b9d8",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:listener/app/CP-TGW-External-ALB/ec6d5e10ec7cd8b0/4efd5bf718a76a2c",
            "priority": 90
          },
          "dependencies": [
            "aws_lb.external_alb",
            "aws_lb_listener.external_alb_listener",
            "aws_lb_target_group.external_lb_tg_app1",
            "aws_lb_target_group.external_lb_tg_app2",
            "aws_security_group.ealb",
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external_lb2_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Ext-NLB2-TG/e79459fca06243c6",
            "arn_suffix": "targetgroup/CP-TGW-Ext-NLB2-TG/e79459fca06243c6",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Ext-NLB2-TG/e79459fca06243c6",
            "lambda_multi_value_headers_enabled": false,
            "name": "CP-TGW-Ext-NLB2-TG",
            "port": 9082,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "name": "CP-TGW-Ext-NLB2-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0ee123db291670666"
          },
          "dependencies": [
            "aws_vpc.inbound_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Ext-NLB-TG/1026e1837cae2237",
            "arn_suffix": "targetgroup/CP-TGW-Ext-NLB-TG/1026e1837cae2237",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Ext-NLB-TG/1026e1837cae2237",
            "lambda_multi_value_headers_enabled": false,
            "name": "CP-TGW-Ext-NLB-TG",
            "port": 9081,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "name": "CP-TGW-Ext-NLB-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0ee123db291670666"
          },
          "dependencies": [
            "aws_vpc.inbound_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external_lb_tg_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Ext-ALB-TG-app1/59b6f4a264ade1d1",
            "arn_suffix": "targetgroup/CP-TGW-Ext-ALB-TG-app1/59b6f4a264ade1d1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Ext-ALB-TG-app1/59b6f4a264ade1d1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "CP-TGW-Ext-ALB-TG-app1",
            "port": 9081,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "CP-TGW-Ext-ALB-TG-app1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0ee123db291670666"
          },
          "dependencies": [
            "aws_vpc.inbound_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external_lb_tg_app2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Ext-ALB-TG-app2/7ea8689d29e4a208",
            "arn_suffix": "targetgroup/CP-TGW-Ext-ALB-TG-app2/7ea8689d29e4a208",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Ext-ALB-TG-app2/7ea8689d29e4a208",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "CP-TGW-Ext-ALB-TG-app2",
            "port": 9082,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "CP-TGW-Ext-ALB-TG-app2"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0ee123db291670666"
          },
          "dependencies": [
            "aws_vpc.inbound_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Int-NLB-TG/1fb2dbc4b462b282",
            "arn_suffix": "targetgroup/CP-TGW-Int-NLB-TG/1fb2dbc4b462b282",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Int-NLB-TG/1fb2dbc4b462b282",
            "lambda_multi_value_headers_enabled": false,
            "name": "CP-TGW-Int-NLB-TG",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "name": "CP-TGW-Int-NLB-TG"
            },
            "target_type": "instance",
            "vpc_id": "vpc-02708a3331b9aaf1e"
          },
          "dependencies": [
            "aws_vpc.spoke_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "internal_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Int-NLB-TG/1fb2dbc4b462b282-20200819233104775000000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Int-NLB-TG/1fb2dbc4b462b282",
            "target_id": "i-042fd6f36ab6e910a"
          },
          "dependencies": [
            "aws_instance.spoke_1_instance",
            "aws_lb_target_group.internal_lb_target_group",
            "aws_security_group.spoke_1_security_group",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_ami.ubuntu_ami",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Int-NLB-TG/1fb2dbc4b462b282-20200819233104772000000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Int-NLB-TG/1fb2dbc4b462b282",
            "target_id": "i-0f40eb368720a5040"
          },
          "dependencies": [
            "aws_instance.spoke_1_instance",
            "aws_lb_target_group.internal_lb_target_group",
            "aws_security_group.spoke_1_security_group",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_ami.ubuntu_ami",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Int-NLB-TG/1fb2dbc4b462b282-20200819233104846900000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:157151771343:targetgroup/CP-TGW-Int-NLB-TG/1fb2dbc4b462b282",
            "target_id": "i-0b90f18b1c2157015"
          },
          "dependencies": [
            "aws_instance.spoke_1_instance",
            "aws_lb_target_group.internal_lb_target_group",
            "aws_security_group.spoke_1_security_group",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_ami.ubuntu_ami",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "outbound_to_management_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0546536e16bd3ea4a519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0546536e16bd3ea4a",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_cloudformation_stack.checkpoint_tgw_cloudformation_stack",
            "aws_ec2_transit_gateway.transit_gateway",
            "data.aws_availability_zones.azs",
            "data.aws_route_table.data_outbound_asg_route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Management_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b9ca73a4b2269196",
            "owner_id": "157151771343",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea3ca33594f20f2b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.110.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.111.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.120.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.20.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.30.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CP-TGW-Management-External-Route"
            },
            "vpc_id": "vpc-02affff7ae45ed230"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_internet_gateway.management_internet_gateway",
            "aws_vpc.management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "inbound_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ff00d630d4279de8",
            "owner_id": "157151771343",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07acf4959bff31f2d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.10.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.110.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.111.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.120.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CP-TGW-Inbound-Route-Table"
            },
            "vpc_id": "vpc-0ee123db291670666"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_internet_gateway.inbound_internet_gateway",
            "aws_vpc.inbound_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spoke_1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0573aa016ab198630",
            "owner_id": "157151771343",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CP-TGW-Spoke-1-Route"
            },
            "vpc_id": "vpc-02708a3331b9aaf1e"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_vpc.spoke_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spoke_1a_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d1f40cec0f2e8ad6",
            "owner_id": "157151771343",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CP-TGW-Spoke-1a-Route"
            },
            "vpc_id": "vpc-0ef232ef82709baf0"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_vpc.spoke_1a_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spoke_2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0af42f41ffaf66f28",
            "owner_id": "157151771343",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-011d7cb94a1aa50b8",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CP-TGW-Spoke-2-Route"
            },
            "vpc_id": "vpc-016cb676105a6b3e0"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_vpc.spoke_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "inbound_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec4d1e8b80723bc7",
            "route_table_id": "rtb-0ff00d630d4279de8",
            "subnet_id": "subnet-007bac7b01e36ca34"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_internet_gateway.inbound_internet_gateway",
            "aws_route_table.inbound_route_table",
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbe43c231a94c0ac",
            "route_table_id": "rtb-0ff00d630d4279de8",
            "subnet_id": "subnet-0fc164747852b3b71"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_internet_gateway.inbound_internet_gateway",
            "aws_route_table.inbound_route_table",
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017c73275b669509b",
            "route_table_id": "rtb-0ff00d630d4279de8",
            "subnet_id": "subnet-03818eb6071b274d6"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_internet_gateway.inbound_internet_gateway",
            "aws_route_table.inbound_route_table",
            "aws_subnet.inbound_subnet",
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "management_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0048a80bb10f0714e",
            "route_table_id": "rtb-0b9ca73a4b2269196",
            "subnet_id": "subnet-09c46ae09bb6f084c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_internet_gateway.management_internet_gateway",
            "aws_route_table.Management_route_table",
            "aws_subnet.management_subnet",
            "aws_vpc.management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spoke-1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8caa60d8a1ad6cb",
            "route_table_id": "rtb-0573aa016ab198630",
            "subnet_id": "subnet-0f8f43e1235a70c53"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_route_table.spoke_1_route_table",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ba45931660a9f15",
            "route_table_id": "rtb-0573aa016ab198630",
            "subnet_id": "subnet-0456b45ed9ef12985"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_route_table.spoke_1_route_table",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f517516750618edf",
            "route_table_id": "rtb-0573aa016ab198630",
            "subnet_id": "subnet-0009323285a0bcf2c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_route_table.spoke_1_route_table",
            "aws_subnet.spoke_1_external_subnet",
            "aws_vpc.spoke_1_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spoke-1a_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0403fafb325458689",
            "route_table_id": "rtb-0d1f40cec0f2e8ad6",
            "subnet_id": "subnet-0f1bb02c297e12047"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_route_table.spoke_1a_route_table",
            "aws_subnet.spoke_1a_external_subnet",
            "aws_vpc.spoke_1a_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b6a072dc09cb9e0",
            "route_table_id": "rtb-0d1f40cec0f2e8ad6",
            "subnet_id": "subnet-0914677997ab580fd"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_route_table.spoke_1a_route_table",
            "aws_subnet.spoke_1a_external_subnet",
            "aws_vpc.spoke_1a_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0d779edb8b7b581",
            "route_table_id": "rtb-0d1f40cec0f2e8ad6",
            "subnet_id": "subnet-01ea68e1d13ae90ac"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_route_table.spoke_1a_route_table",
            "aws_subnet.spoke_1a_external_subnet",
            "aws_vpc.spoke_1a_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spoke_2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048fd44094230b63b",
            "route_table_id": "rtb-0af42f41ffaf66f28",
            "subnet_id": "subnet-0688dbc659250c49c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_route_table.spoke_2_route_table",
            "aws_subnet.spoke_2_external_subnet",
            "aws_vpc.spoke_2_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048fd44094230b63b",
            "route_table_id": "rtb-0af42f41ffaf66f28",
            "subnet_id": "subnet-0688dbc659250c49c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_route_table.spoke_2_route_table",
            "aws_subnet.spoke_2_external_subnet",
            "aws_vpc.spoke_2_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048fd44094230b63b",
            "route_table_id": "rtb-0af42f41ffaf66f28",
            "subnet_id": "subnet-0688dbc659250c49c"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_route_table.spoke_2_route_table",
            "aws_subnet.spoke_2_external_subnet",
            "aws_vpc.spoke_2_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ealb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:security-group/sg-08230596c20e73130",
            "description": "load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08230596c20e73130",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "CP-TGW-Ext-LB-SG",
            "name_prefix": null,
            "owner_id": "157151771343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CP-TGW-Ext-LB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee123db291670666"
          },
          "dependencies": [
            "aws_vpc.inbound_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inbound_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:security-group/sg-0f63e6f62db82a9b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f63e6f62db82a9b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20200819233047546300000004",
            "name_prefix": null,
            "owner_id": "157151771343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CP-TGW-Inbound-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee123db291670666"
          },
          "dependencies": [
            "aws_vpc.inbound_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "management_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:security-group/sg-0cba54c1f13c063d8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cba54c1f13c063d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20200819233049758300000005",
            "name_prefix": null,
            "owner_id": "157151771343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CP-TGW-Management-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02affff7ae45ed230"
          },
          "dependencies": [
            "aws_vpc.management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spoke_1_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:security-group/sg-0cf52fbc12bb91e14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf52fbc12bb91e14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200819233046360400000001",
            "name_prefix": null,
            "owner_id": "157151771343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CP-TGW-Spoke-1-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02708a3331b9aaf1e"
          },
          "dependencies": [
            "aws_vpc.spoke_1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spoke_1a_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:security-group/sg-07c176aada6f26f08",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c176aada6f26f08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200819233046393400000002",
            "name_prefix": null,
            "owner_id": "157151771343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CP-TGW-Spoke-1a-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef232ef82709baf0"
          },
          "dependencies": [
            "aws_vpc.spoke_1a_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spoke_2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:security-group/sg-02721d54c3b997df0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02721d54c3b997df0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20200819233047474400000003",
            "name_prefix": null,
            "owner_id": "157151771343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CP-TGW-Spoke-2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-016cb676105a6b3e0"
          },
          "dependencies": [
            "aws_vpc.spoke_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "inbound_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-007bac7b01e36ca34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.20.100.0/24",
            "id": "subnet-007bac7b01e36ca34",
            "map_public_ip_on_launch": false,
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Inbound-1"
            },
            "vpc_id": "vpc-0ee123db291670666"
          },
          "dependencies": [
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-0fc164747852b3b71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.20.101.0/24",
            "id": "subnet-0fc164747852b3b71",
            "map_public_ip_on_launch": false,
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Inbound-2"
            },
            "vpc_id": "vpc-0ee123db291670666"
          },
          "dependencies": [
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-03818eb6071b274d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.20.102.0/24",
            "id": "subnet-03818eb6071b274d6",
            "map_public_ip_on_launch": false,
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Inbound-3"
            },
            "vpc_id": "vpc-0ee123db291670666"
          },
          "dependencies": [
            "aws_vpc.inbound_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "management_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-09c46ae09bb6f084c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-09c46ae09bb6f084c",
            "map_public_ip_on_launch": false,
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Management"
            },
            "vpc_id": "vpc-02affff7ae45ed230"
          },
          "dependencies": [
            "aws_vpc.management_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spoke_1_external_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-0f8f43e1235a70c53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.110.100.0/24",
            "id": "subnet-0f8f43e1235a70c53",
            "map_public_ip_on_launch": false,
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Spoke-1-External-1"
            },
            "vpc_id": "vpc-02708a3331b9aaf1e"
          },
          "dependencies": [
            "aws_vpc.spoke_1_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-0456b45ed9ef12985",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.110.101.0/24",
            "id": "subnet-0456b45ed9ef12985",
            "map_public_ip_on_launch": false,
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Spoke-1-External-2"
            },
            "vpc_id": "vpc-02708a3331b9aaf1e"
          },
          "dependencies": [
            "aws_vpc.spoke_1_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-0009323285a0bcf2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.110.102.0/24",
            "id": "subnet-0009323285a0bcf2c",
            "map_public_ip_on_launch": false,
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Spoke-1-External-3"
            },
            "vpc_id": "vpc-02708a3331b9aaf1e"
          },
          "dependencies": [
            "aws_vpc.spoke_1_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spoke_1a_external_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-0f1bb02c297e12047",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.111.100.0/24",
            "id": "subnet-0f1bb02c297e12047",
            "map_public_ip_on_launch": false,
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Spoke-1a-External-1"
            },
            "vpc_id": "vpc-0ef232ef82709baf0"
          },
          "dependencies": [
            "aws_vpc.spoke_1a_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-0914677997ab580fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.111.101.0/24",
            "id": "subnet-0914677997ab580fd",
            "map_public_ip_on_launch": false,
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Spoke-1a-External-2"
            },
            "vpc_id": "vpc-0ef232ef82709baf0"
          },
          "dependencies": [
            "aws_vpc.spoke_1a_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-01ea68e1d13ae90ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.111.102.0/24",
            "id": "subnet-01ea68e1d13ae90ac",
            "map_public_ip_on_launch": false,
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Spoke-1a-External-3"
            },
            "vpc_id": "vpc-0ef232ef82709baf0"
          },
          "dependencies": [
            "aws_vpc.spoke_1a_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spoke_2_external_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:subnet/subnet-0688dbc659250c49c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.120.0.0/16",
            "id": "subnet-0688dbc659250c49c",
            "map_public_ip_on_launch": false,
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Spoke-2-External"
            },
            "vpc_id": "vpc-016cb676105a6b3e0"
          },
          "dependencies": [
            "aws_vpc.spoke_2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "inbound_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:vpc/vpc-0ee123db291670666",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-08886174014c2755e",
            "default_route_table_id": "rtb-084e916cfb7633871",
            "default_security_group_id": "sg-04ddf006501ac1e6c",
            "dhcp_options_id": "dopt-0260dc65",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ee123db291670666",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-084e916cfb7633871",
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Inbound-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "management_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:vpc/vpc-02affff7ae45ed230",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0caf4d5d469844a61",
            "default_route_table_id": "rtb-062e9135a38cdd468",
            "default_security_group_id": "sg-0abd13bce62d29eca",
            "dhcp_options_id": "dopt-0260dc65",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02affff7ae45ed230",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-062e9135a38cdd468",
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Management-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "spoke_1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:vpc/vpc-02708a3331b9aaf1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.110.0.0/16",
            "default_network_acl_id": "acl-04bce76e9fe48d0c1",
            "default_route_table_id": "rtb-0a6c32a3dc441e11e",
            "default_security_group_id": "sg-07f056c06e4a646db",
            "dhcp_options_id": "dopt-0260dc65",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02708a3331b9aaf1e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a6c32a3dc441e11e",
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Spoke-1-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "spoke_1a_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:vpc/vpc-0ef232ef82709baf0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.111.0.0/16",
            "default_network_acl_id": "acl-012bac833a746c349",
            "default_route_table_id": "rtb-0f2afc95db913ee28",
            "default_security_group_id": "sg-06f01cc38232f2ddc",
            "dhcp_options_id": "dopt-0260dc65",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ef232ef82709baf0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f2afc95db913ee28",
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Spoke-1a-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "spoke_2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:157151771343:vpc/vpc-016cb676105a6b3e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.0.0/16",
            "default_network_acl_id": "acl-06472763b5423e2f1",
            "default_route_table_id": "rtb-0dba1467f3a5c9935",
            "default_security_group_id": "sg-01a77c2b4fd845cec",
            "dhcp_options_id": "dopt-0260dc65",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-016cb676105a6b3e0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dba1467f3a5c9935",
            "owner_id": "157151771343",
            "tags": {
              "Name": "CP-TGW-Spoke-2-VPC"
            }
          }
        }
      ]
    }
  ]
}